manifests/infra/custom/argocd-gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-http
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway
      namespace: envoy-gateway-system
      sectionName: placeholder-gateway-section
  hostnames:
    - argocd.example.com
  rules:
    - backendRefs: 
      - group: ''
        kind: Service
        name: argocd-server
        port: 443
        weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
