manifests/infra/custom/argocd-gateway/tlsroute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: argocd-tls
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway
      namespace: envoy-gateway-system
      sectionName: argo-https
  hostnames:
    - argocd.example.com
  rules:
    - backendRefs: 
      - group: ''
        kind: Service
        name: argocd-server
        port: 443
        weight: 1
